--- a/08-TCC-and-LCC/08-TCC-and-LCC.tex
+++ b/08-TCC-and-LCC/08-TCC-and-LCC.tex
@@ -29,13 +29,13 @@
 
 \qte
   [Edward Yourdon]
-  {edward-yourdon.jpg}
+  {edward-yourdon}
   {Module cohesion may be conceptualized as the \ul{cement} that holds the processing elements of a module together. In a sense, a high degree of module cohesion is an indication of \ul{close approximation} of inherent problem structure.}
   {yourdon1979structured}
 
 \qte
   [James M. Bieman]
-  {james-bieman.jpg}
+  {james-bieman}
   {We define two measures of class cohesion based on the \ul{direct} and \ul{indirect} connections of method pairs: TCC and LCC.}
   {bieman1995cohesion}
 
@@ -77,7 +77,7 @@ Indirectly connected (\(\texttt{NIC}=2\)): \\
 
 \qte
   [Steve McConnell]
-  {../06-coupling/steve-mcconnell.jpg}
+  {steve-mcconnell}
   {Cohesion refers to how closely all the routines in a class or all the code in a routine support a \ul{central purpose}---how focused the class is. The ideas of \ul{abstraction} and cohesion are closely related---a class interface that presents a good abstraction usually has strong cohesion.}
   {mcconnell2004code}
 
