--- a/09-CAMC-and-NHD/09-CAMC-and-NHD.tex
+++ b/09-CAMC-and-NHD/09-CAMC-and-NHD.tex
@@ -62,7 +62,7 @@ void main(Shape s)
 
 \qte
   [Jagdish Bansiya]
-  {jagdish-bansiya.jpg}
+  {jagdish-bansiya}
   {\textbf{CAMC}: Cohesion Among Methods of Classes (CAMC) evaluates the relatedness of methods in the interface of a class using the parameter lists defined for the methods. It can be applied earlier in the development than can traditional cohesiveness metrics because it relies only on method prototypes declared in a class.}
   {bansiya1999class}
 
@@ -77,7 +77,7 @@ void main(Shape s)
 
 \qte
   [Steve Counsell]
-  {steve-counsell.jpg}
+  {steve-counsell}
   {\textbf{NHD}: The hamming distance (HD) provides a measure of disagreement between rows in a binary matrix. The Normalised Hamming Distance (NHD) metric measures agreement between rows in a binary matrix.}
   {counsell2006interpretation}
 
@@ -93,7 +93,7 @@ void main(Shape s)
 
 \qte
   [Robert C. Martin]
-  {robert-martin.jpg}
+  {robert-martin}
   {Classes that have 'fat' interfaces are classes whose interfaces are not \ul{cohesive}. In other words, the interfaces of the class can be broken up into groups of methods.}
   {martin2002}
 
