--- a/10-object-dimensions/10-object-dimensions.tex
+++ b/10-object-dimensions/10-object-dimensions.tex
@@ -46,7 +46,7 @@
 
 \qte
   [Fernando Brito e Abreu]
-  {fernando-brito-e-abreu.jpg}
+  {fernando-brito-e-abreu}
   {\textbf{Metrics for Object-Oriented Design (MOOD)}: Being able to predict some software quality characteristics based on the design, is one of our great motivations. This ability will allow the designing process to be guided, for instance, by means of \ul{heuristics}.}
   {brito1994object}
 
@@ -164,7 +164,7 @@ maximum number of possible distinct polymorphic situations.''
 
 \qte
   [Chris F. Kemerer]
-  {../07-LCOM/chris-kemerer.jpg}
+  {chris-kemerer}
   {The inheritance hierarchy, a directed acyclic graph will be described as a tree structure with classes as nodes, leaves and a root. In any design application, there can be many possible \ul{hierarchies of classes}. Design choices on the hierarchy employed to represent the application are essentially choices about restricting or expanding the scope of properties of the objects in the application.}
   {chidamber1994metrics}
 
@@ -242,7 +242,7 @@ class Book
 
 \qte
   [Mark Lorenz]
-  {mark-lorenz.jpg}
+  {mark-lorenz}
   {Number of Messages (NOM) measures the number of messages sent in a method, segregated by type of message.}
   {lorenz1994object}
 
