--- a/13-code-churn/13-code-churn.tex
+++ b/13-code-churn/13-code-churn.tex
@@ -42,7 +42,7 @@
 
 \qte
   [Sebastian G. Elbaum]
-  {sebastian-elbaum.jpg}
+  {sebastian-elbaum}
   {We can measure the increase or decrease in system complexity as measured by a selected metric, \ul{code delta}, or we can measure the total amount of \ul{change} the system has undergone between builds, \ul{code churn}.}
   {munson1998}
 
@@ -104,19 +104,19 @@ delta for the system will be close to zero.''
 
 \qte
   [Nachiappan Nagappan]
-  {nachiappan-nagappan.jpg}
+  {nachiappan-nagappan}
   {Our case study provides strong support for the following conclusion: increase in relative code churn measures is accompanied by an increase in system \ul{defect density}.}
   {nagappan2005use}
 
 \qte
   [Rudolf Ferenc]
-  {rudolf-ferenc.jpg}
+  {rudolf-ferenc}
   {We can conclude that committing files with higher cumulative code churn values (i.e. those of longer change history) is more likely to result in negative maintainability change.}
   {farago2015cumulative}
 
 \qte
 [Tobias Olsson]
-  {tobias-olsson.jpg}
+  {tobias-olsson}
   {Non-normal code churn can be a tangible and measurable \ul{effect} of architectural violations in source code. However, more research is needed to better understand this connection, e.g., if violations are the \ul{cause}, the size of the effect, the cost of refactoring, and whether it is generalizable to other system.}
   {olsson2017}
 
