--- a/14-tech-debt/14-tech-debt.tex
+++ b/14-tech-debt/14-tech-debt.tex
@@ -29,7 +29,7 @@
 
 \qte
   [Ward Cunningham]
-  {../05-maintainability-index/ward-cunningham.jpg}
+  {ward-cunningham}
   {Shipping first time code is like going into \ul{debt}. A little debt speeds development so long as it is paid back promptly with a rewrite. The danger occurs when the debt is not repaid. Every minute spent on not-quite-right code counts as \ul{interest} on that debt.}
   {cunningham1992}
 
@@ -128,7 +128,7 @@ assert fibonacci(10) == 55;
 
 \qte
   [Giancarlo Succi]
-  {giancarlo-succi.jpg}
+  {giancarlo-succi}
   {This paper presents the benefits of considering the entire backlog when prioritizing tasks. We employ an iterative approach using Particle Swarm Optimization to optimize a linear model with various preprocessing methods to determine the optimal model
 for task prioritization within a backlog.}
   {bugayenko2023}
