--- a/15-code-coverage/15-code-coverage.tex
+++ b/15-code-coverage/15-code-coverage.tex
@@ -125,13 +125,13 @@ assert foo(50) == 42;
 
 \qte
   [William Robert Elmendorf]
-  {william-elmendorf.jpg}
+  {william-elmendorf}
   {A disciplined test control process is composed of five steps: 1) establish the intended extent of testing; 2) create a list of functional \ul{variations} eligible for testing; 3) rank and subset the \ul{eligible} variations so that test resources can be directed at those with the higher payoff; 4) calculate the \ul{test coverage} of the test case library; and 5) verify attainment of the \ul{planned} test coverage.}
   {elmendorf1969}
 
 \qte
   [David Gelperin]
-  {david-gelperin.jpg}
+  {david-gelperin}
   {However, only half regularly document their test designs, only half regularly save their tests for reuse after software changes, and an extremely small five percent provide regular \ul{measurements} of code coverage.}
   {gelperin1988}
 
@@ -151,37 +151,37 @@ measurements of code coverage}.''\par
 
 \qte
   [Boris Beizer]
-  {boris-beizer.jpg}
+  {boris-beizer}
   {Junky software takes more tests to achieve coverage, but it breaks under any systematic test.}
   {beizer1995}
 
 \qte
   [Brian Marick]
-  {brian-marick.jpg}
+  {brian-marick}
   {Coverage numbers (like many numbers) are dangerous because they're \ul{objective} but \ul{incomplete}. They too often distort sensible action. Using them in isolation is as foolish as hiring based only on GPA.}
   {marick1997}
 
 \qte
   [Martin Fowler]
-  {../06-coupling/martin-fowler.jpg}
+  {martin-fowler}
   {I would be suspicious of anything like 100\% --- it would smell of someone writing tests to make the coverage \ul{numbers happy}, but not thinking about what they are doing.}
   {fowler1997}
 
 \qte
   [Cem Kaner]
-  {cem-kaner.jpg}
+  {cem-kaner}
   {As you get near 100 percent line coverage, that doesn't tell you the product is near release. It just tells you that the product is no longer \ul{obviously far} from release according to \ul{this measure}.}
   {kaner2002}
 
 \qte
   [Pavneet Singh Kochhar, David Lo, Julia Lawall, Nachiappan Nagappan]
-  {pavneet-singh-kochhar.jpg}
+  {pavneet-singh-kochhar}
   {Our results show that coverage has an \ul{insignificant correlation} with the number of bugs that are found after the release of the software at the project level, and \ul{no such correlation} at the file level.}
   {kochhar2017}
 
 \qte
   [Goran Petrovi{\'c}]
-  {goran-petrovic.jpg}
+  {goran-petrovic}
   {Google \ul{does not enforce} any code coverage thresholds across the entire codebase. Projects (or groups of projects) are free to define their own thresholds and goals. Many projects opt-into a centralized voluntary alerting system that defines \ul{five levels} of code coverage thresholds.}
   {ivankovi2019}
 
@@ -190,7 +190,7 @@ measurements of code coverage}.''\par
 
 \qte
   [Adam Bender]
-  {adam-bender.jpg}
+  {adam-bender}
   {Code coverage \ul{does not guarantee} that the covered lines or branches have been tested correctly, it just guarantees that they have been executed by a test. But a low code coverage number \ul{does guarantee} that large areas of the product are going completely untested by automation on every single deployment.}
   {arguelles2020}
 
