--- a/16-mutation-coverage/16-mutation-coverage.tex
+++ b/16-mutation-coverage/16-mutation-coverage.tex
@@ -116,7 +116,7 @@ int fibonacci(int n) {
 
 \qte
   [Richard G. Hamlet]
-  {richard-hamlet.jpg}
+  {richard-hamlet}
   {It is a truism that \ul{good} software is easy to \ul{maintain}.}
   {hamlet1997}
 
@@ -128,17 +128,17 @@ int fibonacci(int n) {
 
 \qte
   [Richard J. Lipton]
-  {richard-lipton.jpg}
+  {richard-lipton}
   {Our groups at Yale University and the Georgia Institute of Technology have constructed a system whereby we can determine the extent to which a given set of test data has \ul{adequately} tested a Fortran program by direct measurement of the number and kinds of errors it is \ul{capable} of uncovering.}
   {demillo1978hints}
 
 \qte
-  {timothy-budd.jpg}
+  {timothy-budd}
   {A test set is \ul{adequate} if it can distinguish the subject program from a collection of similar programs, called mutants, obtained by making \ul{small} syntactic modifications to the subject program.}
   {budd1981mutation}
 
 \qte
-  {william-howden.jpg}
+  {william-howden}
   {In \ul{weak mutation testing} method, tests are constructed which are guaranteed to force program statements which contain certain classes of errors to act incorrectly during the execution of the program over those tests.}
   {howden1982weak}
 
@@ -180,13 +180,13 @@ fibonacci(12) == 144;
 
 \qte
   [Jeff Offutt]
-  {jeff-offutt.jpg}
+  {jeff-offutt}
   {Our results indicate that \ul{weak mutation} can be applied in a manner that is almost as effective as mutation testing, and with significant computational savings.}
   {offutt1994empirical}
 
 \qte
   [Richard DeMillo]
-  {richard-demillo.jpg}
+  {richard-demillo}
   {A mutant operator mutates \ul{one syntactic entity} of a program. Further, only one mutant operator
 is applied at a time to the program under test.}
   {agrawal1989design}
@@ -206,7 +206,7 @@ and
 
 \qte
   [Phyllis G. Frankl]
-  {phyllis-frankl.jpg}
+  {phyllis-frankl}
   {Those mutants that compute precisely the same function are called \ul{equivalent} mutants and the others are called \ul{inequivalent} mutants.}
   {frankl1997all}
 
@@ -268,7 +268,7 @@ int fibonacci(int n) {
 
 \qte
   [Lionel C. Briand]
-  {lionel-briand.jpg}
+  {lionel-briand}
   {Our analysis suggests that mutants, when using carefully selected mutation operators and after removing equivalent mutants, can provide a \ul{good indication} of the fault detection \ul{ability} of a test suite.}
   {andrews2005}
 
@@ -281,7 +281,7 @@ int fibonacci(int n) {
 
 \qte
   [Yu-Seung Ma]
-  {yu-seung-ma.jpg}
+  {yu-seung-ma}
   {Comparing with previous mutation systems for procedural programs, \ul{MuJava} is very fast. However, it is relatively slow when it generates and runs lots of mutants.}
   {ma2006}
 
@@ -294,7 +294,7 @@ int fibonacci(int n) {
 
 \qte
   [Paul Ammann]
-  {paul-ammann.jpg}
+  {paul-ammann}
   {Three conditions must be present for a failure to be observed:
 1)~The location in the program that contains the fault must be reached (\ul{\textbf{R}eachability}).
 2)~After executing the location, the state of the program must be incorrect (\textbf{I}nfection).
@@ -303,7 +303,7 @@ int fibonacci(int n) {
 
 \qte
   [Mark Harman]
-  {mark-harman.jpg}
+  {mark-harman}
   {Traditional mutation testing considers only first order mutants, created by the injection of a single fault. Often these first order mutants denote trivial faults that are easily killed. \ul{Higher order mutants} are created by the insertion of two or more faults.}
   {jia2009}
 
@@ -315,7 +315,7 @@ int fibonacci(int n) {
 
 \qte
   [Jie Zhang]
-  {jie-zhang.jpg}
+  {jie-zhang}
   {PMT applies ML to build a predictive model by collecting a series of easy-to-access features (e.g., coverage and mutation operator) on already executed mutants of earlier versions of the project. Based on this model, PMT \ul{predicts} the mutation testing results (i.e., whether each mutant is killed or not) of a new version of project without executing its mutants at all.}
   {zhang2016}
 
