--- a/17-function-points/17-function-points.tex
+++ b/17-function-points/17-function-points.tex
@@ -28,27 +28,27 @@
 \plush{\sqmTitlePage{17}{}}
 
 \qte
-  {capers-jones.jpg}
+  {capers-jones}
   {From the start of the software era in the 1950s until roughly 1970, software cost estimating was performed \ul{manually}, using simple \ul{rules of thumb} or local estimating algorithms developed through trial and error methods.}
   {jones2007}
 
 \qte
-  {fred-brooks.jpg}
+  {fred-brooks}
   {Our techniques of estimating are \ul{poorly developed}. More seriously, they reflect an unvoiced assumption which is quite untrue, i.e., that \ul{all will go well}.}
   {brooks1995mythical}
 
 \qte
-  {lawrence-putnam.jpg}
+  {lawrence-putnam}
   {\textbf{SLIM}: In general, the \ul{size} of the product in source \ul{statements} is \(S = C \times K^{1/3} \times t^{4/3}\), where \(C\) is a productivity constant, \(K\) is development effort, and \(t\) is time.}
   {putnam1978general}
 
 \qte
-  {barry-boehm.jpg}
+  {barry-boehm}
   {\textbf{COCOMO} (\textbf{Co}nstructive \textbf{Co}st \textbf{Mo}del): We compute the \ul{estimated development effort} as the nominal development effort times the product of the effort multipliers for the 15 \ul{cost driver attributes}... A nominal development effort is estimated as a function of the product's size in delivered source \ul{instructions} in thousands (KDSI) and the project's development mode.}
   {boehm1984software}
 
 \qte
-  {allan-albrecht.jpg}
+  {allan-albrecht}
   {\textbf{FPA}: The general approach is to count the number of external user \ul{inputs}, \ul{inquiries}, \ul{outputs}, and master \ul{files} delivered by the development project. These factors are outward manifestations of any application. They cover all the functions in an application.}
   {albrecht1979measuring}
 
@@ -67,7 +67,7 @@
 \end{multicols}}
 
 \qte
-  {peter-chen.jpg}
+  {peter-chen}
   {The entity-relationship (ER) model adopts the more natural view that the real world consists of \ul{entities} and \ul{relationships}. It incorporates some of the important semantic information about the real world.}
   {chen1976entity}
 
@@ -77,7 +77,7 @@
 {\scriptsize Source: \bibentry{chen1976entity}\par}}
 
 \qte
-  {tom-demarco.jpg}
+  {tom-demarco}
   {The Data Flow Diagram shows flow of \ul{data}, not of \ul{control}. This is the difference between Data Flow Diagrams and flowcharts. The Data Flow Diagram portrays a situation from the point of view of the data, while a flowchart portrays it from the point of view of those who act upon the data.}
   {demarco1978}
 
@@ -92,7 +92,7 @@
   {albrecht1983software}
 
 \qte
-  {book-of-charles-symons.jpg}
+  {book-of-charles-symons}
   {The major difference is that \textbf{Mk II FPA}, with its \ul{finer granularity}, is a continuous measure whereas IFPUG limits component size once a threshold is reached.}
   {symons1991software}
 
@@ -102,7 +102,7 @@
 {\scriptsize Source: \bibentry{symons1991software}\par}}
 
 \qte
-  {daniel-galorath.jpg}
+  {daniel-galorath}
   {\textbf{SEER-SEM} is based on the concept that if a user can describe the \ul{essential characteristics} of a project and range of size, SEER-SEM can provide estimates of schedules, efforts, staffing, risks, uncertainties, and defects, characterizing each as a most likely \ul{estimate} or a risk estimate.}
   {galorath2006software}
 
@@ -126,7 +126,7 @@
 \end{multicols}}
 
 \qte
-  {capers-jones.jpg}
+  {capers-jones}
   {The reliability of function point analysis is good enough to allow function points to serve as the \ul{basis} for contracts, for carrying out scholarly research, for cost estimating, and for creating reliable benchmarks. In fact, function points are now \ul{used} for more business purposes than any other metric in the history of software.}
   {iso20926foreword}
 
@@ -162,17 +162,17 @@ CFP is the unadjusted function points added by the conversion unadjusted functio
 \end{multicols}}
 
 \qte
-  {roger-pressman.jpg}
+  {roger-pressman}
   {The function point metric, like LOC, is relatively \ul{controversial}... Opponents claim that the method requires some `sleight of hand' in that computation is based on \ul{subjective}, rather than \ul{objective}, data.}
   {pressman2005software}
 
 \qte
-  {../07-LCOM/chris-kemerer.jpg}
+  {chris-kemerer}
   {Function Points and Function Counts (adjusted FPs) can be used as predictors of KSLOC. In particular, Function Counts \ul{correlated} with KSLOC at the level of \ul{75.1 percent}, which is similar to the correlations published by \citet{albrecht1983software}, and is likely to be good enough to be of use to the software manager.}
   {kemerer1987empirical}
 
 \qte
-  {graham-low.jpg}
+  {graham-low}
   {Function point counts appear to be a more consistent a \emph{priori} measure of software size than source lines of code. As such it is recommended that function point \ul{estimates} be used in preference to lines of code estimates as the measure of system size.}
   {low1990function}
 
