--- a/18-defect-density/18-defect-density.tex
+++ b/18-defect-density/18-defect-density.tex
@@ -29,7 +29,7 @@
 
 \qte
   [Michael Fagan]
-  {michael-fagan.jpg}
+  {michael-fagan}
   {Feedback of results from inspections must be counted for the programmer's use and \ul{benefit}: they \ul{should not} under any circumstances be used for programmer performance \ul{appraisal}.}
   {fagan1976design}
 
@@ -112,25 +112,25 @@
 
 \qte
   [Harlan D. Mills]
-  {harlan-mills.jpg}
+  {harlan-mills}
   {While our experience in applying statistical quality-control techniques to software development is limited, initial experience indicates that \ul{five fixes per thousand lines of code} can be tolerated without invalidating the application of statistics to estimate MTTF. This failure rate is low compared to normal development practices, where \ul{20 to 60} fixes per thousand lines of code is \ul{not atypical}.}
   {cobb1990engineering}
 
 \qte
   [Joseph Sherif]
-  {joseph-sherif.jpg}
+  {joseph-sherif}
   {The analysis showed a \ul{significantly higher} density of defects during requirements inspections. It was also observed, that the defect densities found \ul{decreased} exponentialy as the mork products approached the coding phase.}
   {kelly1992analysis}
 
 \qte
   [Victor R. Basili]
-  {victor-basili.jpg}
+  {victor-basili}
   {Five out of the six object-oriented metrics presented by \citet{chidamber1994metrics} appear to be useful to predict class fault-proneness during the high- and low-level design phases of the life-cycle.}
   {basili1996validation}
 
 \qte
   [Norman Fenton]
-  {norman-fenton.jpg}
+  {norman-fenton}
   {Our critical review of state-of-the-art of models for predicting software defects has shown that many methodological and theoretical \ul{mistakes} have been made... We recommend holistic models for software defect prediction, using Bayesian Belief Networks, as alternative approaches to the single-issue models used at present.}
   {fenton1999critique}
 
@@ -150,37 +150,37 @@
 
 \qte
   [Steve McConnell]
-  {../06-coupling/steve-mcconnell.jpg}
+  {steve-mcconnell}
   {Industry average experience is about 1-25 errors per 1000 lines of code for delivered software. Cases that have one-tenth as many errors as this are rare; cases that have 10 times more tend not to be reported. (They probably aren't ever completed!) Microsoft experiences about 10–20 defects per 1000 lines of code during in-house testing and 0.5 defects per 1000 lines of code in released product.}
   {mcconnell2004code}
 
 \qte
   [Parastoo Mohagheghi]
-  {parastoo-mohagheghi.jpg}
+  {parastoo-mohagheghi}
   {The analysis showed that \ul{reused} components have lower defect-density than \ul{non-reused} ones. Reused components have more defects with highest severity than the total distribution, but less defects after delivery.}
   {mohagheghi2004empirical}
 
 \qte
   [Nachiappan Nagappan]
-  {../13-code-churn/nachiappan-nagappan.jpg}
+  {nachiappan-nagappan}
   {A case study performed on Windows Server 2003 indicates the validity of the relative \ul{code churn} measures as early indicators of system \ul{defect density}. Our code churn metric suite is able to discriminate between fault and not fault-prone binaries with an accuracy of 89\%.}
   {nagappan2005use}
 
 \qte
   [Thomas Ball]
-  {thomas-ball.jpg}
+  {thomas-ball}
   {Our results show that the \ul{static analysis} defect density is correlated at statistically significant levels to the \ul{pre-release} defect density determined by various testing activities. Further, the static analysis defect density can be used to predict the pre-release defect density with a high degree of sensitivity.}
   {nagappan2005static}
 
 \qte
   [A G{\"u}ne{\c{s}} Koru]
-  {gunes-koru.jpg}
+  {gunes-koru}
   {We studied four large-scale object-oriented products, Mozilla, Cn3d, JBoss, and Eclipse. We observed that defect proneness increased as class size increased, but at a \ul{slower} rate; smaller classes were proportionally more problematic than larger classes.}
   {koru2008investigation}
 
 \qte
   [Kazuhiro Yamashita]
-  {kazuhiro-yamashita.jpg}
+  {kazuhiro-yamashita}
   {Although we found some support for findings in recent literature that \ul{smaller files} have higher defects density, we found further evidence that \ul{very large} or \ul{complex} files have lower defect densities and in some cases even lower defect proneness. Our findings have immediate practical implications: the redistribution of Java code into smaller and less complex files may be \ul{counterproductive}.}
   {yamashita2016thresholds}
 
@@ -297,7 +297,7 @@
 
 \qte
   [Xiao Yu]
-  {xiao-yu.jpg}
+  {xiao-yu}
   {The problem of \ul{predicting} the precise number of defects via regression algorithms is \ul{far} from being solved.}
   {yu2022predicting}
 
