--- a/11-clone-coverage/11-clone-coverage.tex
+++ b/11-clone-coverage/11-clone-coverage.tex
@@ -34,19 +34,19 @@
 
 \qte
   [Robert C. Martin]
-  {../09-CAMC-and-NHD/robert-martin.jpg}
+  {robert-martin}
   {Duplication is the \ul{primary enemy} of a well-designed system.}
   {martin2008clean}
 
 \qte
   [Qurat Ul Ain]
-  {qurat-ul-ain.jpg}
+  {qurat-ul-ain}
   {If a bug is identified in one segment of code, all the similar segments need to be \ul{checked} for the same bug. Consequently, code duplication may lead to bug propagation that significantly affects the maintenance cost.}
   {ain2019}
 
 \qte
   [Rainer Koschke]
-  {rainer-koschke.jpg}
+  {rainer-koschke}
   {The problem with code cloning is that errors in the original must be fixed in every copy. Other kinds of maintenance changes, for instance, extensions or adaptations, must be applied \ul{multiple times}, too. Yet, it is usually not documented \ul{where} code was copied.}
   {bellon2007}
 
@@ -108,7 +108,7 @@ void sayHello(int id) {
 
 \qte
   [Brenda S. Baker]
-  {brenda-baker.jpg}
+  {brenda-baker}
   {Two lines of code are considered to be identical if they contain the same \ul{sequence of characters} after removing comments and white space; the \ul{semantics} of the program statements are not analyzed.}
   {baker1993}
 
@@ -127,25 +127,25 @@ duplicated.
 
 \qte
   [Andy Hunt]
-  {andy-hunt.jpg}
+  {andy-hunt}
   {\textbf{Don't Repeat Yourself (DRY)}: Every piece of knowledge must have a \ul{single}, unambiguous, authoritative representation within a system.}
   {hunt1999pragmatic}
 
 \qte
   [Kent Beck]
-  {kent-beck.jpg}
+  {kent-beck}
   {\textbf{The Rule of Three}: The \ul{first} time you do something, you just do it. The \ul{second} time you do something similar, you wince at the duplication, but you do the duplicate thing anyway. The \ul{third} time you do something similar, you refactor.}
   {fowler1999refactoring}
 
 \qte
   [Yoshiki Higo]
-  {yoshiki-higo.jpg}
+  {yoshiki-higo}
   {Code-clone analysis is a good vehicle to quantitatively understand the differences and improvements between two versions of the same software system}
   {livieri2007}
 
 \qte
   [Wasi Haider Butt]
-  {wasi-haider-butt.jpg}
+  {wasi-haider-butt}
   {We identified and analyzed 26 Code Clone Detection (CCD) tools, i.e., 13 existing and 13 proposed/developed. Moreover, 62 open-source subject systems whose source code is utilized for the CCD are presented.}
   {ain2019}
 
@@ -245,7 +245,7 @@ More than one code segments that are functionally similar but implemented by dif
 
 \qte
   [Jens Krinke]
-  {jens-krinke.jpg}
+  {jens-krinke}
   {For the three Java systems studied, the following results were found: 1)~cloned code is usually \ul{older} than non-cloned code, 2)~cloned code in a file is usually older than the non-cloned code in the same file. Both results suggest that cloned code is \ul{more stable} than non-cloned code.}
   {krinke2011}
 
