--- a/12-dead-code/12-dead-code.tex
+++ b/12-dead-code/12-dead-code.tex
@@ -86,7 +86,7 @@ void main(int x) {
 
 \qte
   [Simone Romano]
-  {simone-romano.jpg}
+  {simone-romano}
   {Although there is some consensus on the fact that dead code is a common phenomenon, it could be \ul{harmful}, and it seems to matter to software professionals; surprisingly, dead code has received very little empirical attention from the software engineering research community.}
   {romano2018}
 
@@ -94,7 +94,7 @@ void main(int x) {
 
 \qte
   [Sebastian Eder]
-  {sebastian-eder.jpg}
+  {sebastian-eder}
   {We conducted the study on the level of methods in the sense of object oriented programming. The systems contains 25,390 methods. We found that \ul{25\% of all methods} were never used during the complete period.}
   {eder2012}
 
@@ -148,25 +148,25 @@ and the smaller the amount of the abandoned code inside it.''
 
 \qte
   [Ciera Jaspan]
-  {ciera-jaspan.jpg}
+  {ciera-jaspan}
   {Our survey results show that engineers at Google strongly prefer our monolithic repo, and that \ul{visibility} of the codebase and simple \ul{dependency management} were the primary factors for this preference.}
   {jaspan2018}
 
 \qte
   [Rachel Potvin]
-  {rachel-potvin.jpg}
+  {rachel-potvin}
   {The Google codebase includes approximately \ul{one billion files} and has a history of approximately 35 million commits spanning Google's entire 18-year existence. The repository contains \ul{86TBa} of data, including approximately \ul{two billion lines of code} in nine million unique source files.}
   {potvin2016}
 
 \qte
   [Durham Goode]
-  {durham-goode.jpg}
+  {durham-goode}
   {Facebook's main source repository is enormous---many times larger than even the Linux kernel, which checked in at \ul{17 million lines of code} and \ul{44,000 files} in 2013.}
   {goode2014}
 
 \qte
   [Tomas Votruba]
-  {tomas-votruba.jpg}
+  {tomas-votruba}
   {Before monorepo, I had to upgrade every package manually, which resulted in dissonance: one package used Symfony\textbackslash{}Console 3.2, but other only 2.8 and it got messy \ul{for no reason}.}
   {votruba2017}
 
